# ffreis-python-onnx-model-serving

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  coverage-e2e-local.xml  coverage-integration-local.xml  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: build-all.yml  code-quality.yml  code-review.yml  commit-checks.yml  coverage.yml  deepsource.yml  docker-build.yml  e2e.yml  examples.yml  grpc-sync.yml  grype.yml  hypothesis-integration.yml  integration.yml  trivy.yml
app/: pyproject.toml  requirements.txt
app/tests/: test_lib.py
container/: Dockerfile.base-builder  Dockerfile.builder  Dockerfile.runner  Dockerfile.services  Dockerfile.uv-builder
container/examples/: Dockerfile.example-base  Dockerfile.example-logistic-regression  Dockerfile.example-neural-network  Dockerfile.example-random-forest
docs/: grpc.md  openapi.yaml
examples/: build_all_smoke_models.py  build_pytorch_and_tensorflow_smoke_models.py  build_sklearn_and_onnx_smoke_models.py  build_smoke_model.py  common.py  docker-compose.api-grpc.yml  grpc_client.py  smoke_api_grpc.py  train_and_serve_logistic_regression.py  train_and_serve_neural_network.py  train_and_serve_random_forest.py
proto/onnx_serving_grpc/: inference.proto
scripts/: check_coverage.py  check_grpc_stubs.sh  check_openapi.py  check_openapi_drift.py  entrypoint.sh  generate_grpc_stubs.sh
src/: application.py  base_adapter.py  config.py  input_output.py  onnx_adapter.py  openapi_contract.py  parsed_types.py  pytorch_adapter.py  serving.py  sklearn_adapter.py  telemetry.py  tensorflow_adapter.py  training.py  value_types.py
src/onnx_model_serving/: __init__.py
src/onnx_model_serving/grpc/: __init__.py  server.py
src/onnx_serving_grpc/: __init__.py  inference_pb2.py  inference_pb2_grpc.py
tests/: conftest.py
tests/e2e_tests/: test_cli_e2e.py  test_live_server_inference.py
tests/integration_tests/: test_grpc_parity.py  test_real_inference_pipeline.py
tests/unit_tests/: test_application.py  test_base_adapter.py  test_grpc_server.py  test_gunicorn_configuration.py  test_input_output.py  test_lib.py  test_onnx_adapter.py  test_onnx_model_serving_lib.py  test_openapi_contract.py  test_pytorch_adapter.py  test_serving.py  test_sklearn_adapter.py  test_telemetry.py  test_tensorflow_adapter.py
tests/unit_tests/model_serving/: __init__.py  test_application.py  test_base_adapter.py  test_input_output.py  test_onnx_adapter.py  test_telemetry.py  test_training.py
tests/unit_tests/onnx_model_serving/: __init__.py  test_lib.py
